test/gpu/nongpu/cpu-vs-gpu-cond-fold.good
cpu-vs-gpu-cond-fold.chpl:12: error: int(64)
